
configure_cmd="./configure --engine=spidermonkey --enable-static"

# Determine whether or not to also generate a configuration for a debug build.
# Regardless of the value of this arg, Node's configuration script will always
# generate a configuration for a release build.  This only determines whether
# or not it *also* generates a debug one.
if test "$MOZ_DEBUG"; then
  configure_cmd="${configure_cmd} --debug --with-external-spidermonkey-debug=${_objdir} --with-external-spidermonkey-release=${_objdir}";
else
  configure_cmd="${configure_cmd} --with-external-spidermonkey-release=${_objdir}";
fi

case "$target" in
*-darwin*)
  CXXFLAGS="${CXXFLAGS} -mmacosx-version-min=10.9"
  LDFLAGS="${LDFLAGS} -mmacosx-version-min=10.9"
  ;;
esac

export CXXFLAGS
export LDFLAGS

(
  cd ${_topsrcdir}/positron/spidernode &&
  which python2.7 > /dev/null &&
  exec python2.7 ${configure_cmd} ||
  exec python    ${configure_cmd}
)

# TODO: uncomment this (and remove the equivalent in old-configure.in)
# once https://bugzilla.mozilla.org/show_bug.cgi?id=1292653 has been fixed.
# AC_OUTPUT_SUBDIRS(positron/app/spidernode)
